# pomonote

./: Cargo.toml  LICENSE  commands.txt  install.zsh  readme.md
src/: app.rs  cli.rs  display.rs  lib.rs  main.rs  reduce.rs  table.rs  utils.rs
src/commands/: add.rs  complete.rs  mod.rs  remove.rs  start.rs  stop.rs  toggleStatus.rs
src/models/: mod.rs  timer.rs  todo.rs
tests/: itegration_tests.rs  reducer.rs  timer.rs  todo.rs
